--- a/style.css
+++ b/style.css
@@ -1,3 +1,25 @@
+.manu-bar{
+    margin: 0;
+    padding: 8px;
+    background:black;
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    
+    
+}
+.manu li{
+    display: inline;
+}
+.common{
+    font-family: monospace;
+    font-size: 25px;
+    color: white;
+.common:hover{
+    background-color: #786ed4;
+    
+}    
+}
 
 .section1{
 height: 685px;
